--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="answer_the_questions">Answer the questions</string>
     <string name="get_quotes">Get Quotes</string>
     <string name="compare_the_prices_and_decide">Compare the Prices and Decide</string>
+    <string name="title">Hizmet piş ağzıma düş</string>
 </resources>
