--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="get_quotes">Get Quotes</string>
     <string name="compare_the_prices_and_decide">Compare the Prices and Decide</string>
     <string name="title">Hizmet piş ağzıma düş</string>
+    <string name="devam">Devam</string>
 </resources>
