Update detail page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hizmet Piş Ağzıma Düş</string>
+    <string name="app_name">Armut</string>
     <string name="title_main">All services</string>
     <string name="action_settings">Settings</string>
     <!-- TODO: Remove or change this placeholder text -->
